--- a/index.html
+++ b/index.html
@@ -40,19 +40,19 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-4">
-                        <img src="img/html.png" alt="HTML5" class="w-100">
+                        <img src="img/html5.jpg" alt="HTML5" class="w-100">
                         <h2>Título 1</h2>
                         <h4>Contenido de Card</h4>
                         <h6>Última actualización 1</h6>
                     </div>
                     <div class="col-4">
-                        <img src="img/css.png" alt="CSS3" class="w-100">
+                        <img src="img/css3.png" alt="CSS3" class="w-100">
                         <h2>Título 2</h2>
                         <h4>Contenido de Card</h4>
                         <h6>Última actualización 2</h6>
                     </div>
                     <div class="col-4">
-                        <img src="img/bootstrap.png" alt="Bootstrap" class="w-100">
+                        <img src="img/Bootstrap.png" alt="Bootstrap" class="w-100">
                         <h2>Título 3</h2>
                         <h4>Contenido de Card</h4>
                         <h6>Última actualización 3</h6>
